--- a/allureConfig.json
+++ b/allureConfig.json
@@ -1,10 +1,5 @@
 ﻿{
   "allure": {
-    "directory": "allure-results",
-    "links": [
-      "https://github.com/AutomateThePlanet/Meissa/issues/{issue}",
-      "https://github.com/AutomateThePlanet/Meissa/projects/2#card-{tms}",
-      "{link}"
-    ]
+    "directory": "allure-results"
   }
 }
